kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: meeting-summarizer
spec:
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
  selector:
    app: frontend
  type: NodePort
